Footer spacing fix

--- a/wp-content/themes/galbert/css/app/layout/_wrapper.scss
+++ b/wp-content/themes/galbert/css/app/layout/_wrapper.scss
@@ -6,6 +6,7 @@
 section {
 
 	width: 100%;
+	margin-bottom: 30px;
 
 }
 
